-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 8
-
Component/s: client-libs
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8021042 | 8 | Philip Race | P3 | Resolved | Fixed | b102 |
ctw/jre/lib/rt_jar/preloading_1
ctw/jre/lib/rt_jar/sun_awt_X11_ListHelper
Fails with segfault on all Solaris platforms.
It has been suggested this may be cause by wrong initialization order.
ctw/jre/lib/rt_jar/sun_awt_X11_ListHelper
Fails with segfault on all Solaris platforms.
It has been suggested this may be cause by wrong initialization order.
- backported by
-
JDK-8021042 CTW fails on all Solaris platforms
-
- Resolved
-
- relates to
-
JDK-8024626 CTW CRASH: SIGSEGV in ctw/jre/lib/rt_jar/preloading_1 and ctw/jre/lib/rt_jar/sun_awt_X11_ListHelper
-
- Resolved
-
-
JDK-7017493 ConcurrentLinkedDeque: Unexpected initialization order can lead to crash due to use of Unsafe
-
- Closed
-