7196866: CTW fails on all Solaris platforms

Reviewed-by: prr, jrose, twisti, kvn